--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ z" />
         var access_token = "";
         var fullUrl = domainUrl + fields + "&access_token=" + access_token;
 
-        fetch(fullUrl, requestOptions)
+        fetch("Assets.json")
             .then(response => response.json())
             .then(dataArray => {
                 console.log(dataArray);
