--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ z" />
                     <li class="nav-item">
                         <a class="nav-link" href="#reviews">המלצות</a>
                     </li>
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a class="nav-link" href="#bundles">חבילות</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">צרו קשר</a>
                     </li>
@@ -282,7 +282,7 @@ z" />
             </div>
         </div>
         <!--<hr />-->
-        <div class="bundles hebrew" id="bundles">
+<!--         <div class="bundles hebrew" id="bundles">
             <h2>החבילות שלנו</h2>
             <div class="row justify-content-center" style="margin: 0;">
                 <div class="pricing-col col-lg-4 col-md-6">
@@ -292,12 +292,10 @@ z" />
                         </div>
                         <div class="card-body">
                             <h2>Free</h2>
-                            <p>עטיפת סינגל / אלבום</p>
-                            <!-- <p>Header ליוטיוב ופלטפורמות סטרימינג</p> -->
-                            <p>Thumbnail ליוטיוב</p>
+                            <p>עטיפת סינגל / אלבום</p> -->
+<!--                             <p>Thumbnail ליוטיוב</p>
                             <p>עריכת קליפ</p>
                             <p>פוסטר</p>
-                            <!-- <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button> -->
                         </div>
                     </div>
                 </div>
@@ -313,9 +311,9 @@ z" />
                             <p>אייקון</p>
                             <p>מיתוג (צבעים, פונטים)</p>
                             <p>כרטיס ביקור</p>
-
+ -->
                             <!-- <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button> -->
-                        </div>
+<!--                         </div>
                     </div>
                 </div>
 
@@ -331,13 +329,13 @@ z" />
                             <p>עיצוב פוסטים</p>
                             <p>עיצוב תמונת פרופיל</p>
                             <p>עיצוב header</p>
-                            <!-- <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button> -->
-                        </div>
+                            <!-- <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button> --> -->
+<!--                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- <hr> -->
+        <!-- <hr> --> -->
         <div class="contact-us hebrew" id="contact">
             <h2>צרו קשר</h2>
             <br />
