--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@ z" />
                 </div>
             </div>
         </div>
-        <!--<hr />-->
 <!--         <div class="bundles hebrew" id="bundles">
             <h2>החבילות שלנו</h2>
             <div class="row justify-content-center" style="margin: 0;">
@@ -292,8 +291,8 @@ z" />
                         </div>
                         <div class="card-body">
                             <h2>Free</h2>
-                            <p>עטיפת סינגל / אלבום</p> -->
-<!--                             <p>Thumbnail ליוטיוב</p>
+                            <p>עטיפת סינגל / אלבום</p>
+                            <p>Thumbnail ליוטיוב</p>
                             <p>עריכת קליפ</p>
                             <p>פוסטר</p>
                         </div>
@@ -311,9 +310,7 @@ z" />
                             <p>אייקון</p>
                             <p>מיתוג (צבעים, פונטים)</p>
                             <p>כרטיס ביקור</p>
- -->
-                            <!-- <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button> -->
-<!--                         </div>
+                        </div>
                     </div>
                 </div>
 
@@ -329,13 +326,12 @@ z" />
                             <p>עיצוב פוסטים</p>
                             <p>עיצוב תמונת פרופיל</p>
                             <p>עיצוב header</p>
-                            <!-- <button type="button" class="btn btn-lg btn-outline-dark">Sign Up</button> --> -->
-<!--                         </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- <hr> --> -->
+        <!-- <hr> -->
         <div class="contact-us hebrew" id="contact">
             <h2>צרו קשר</h2>
             <br />
