Changed "reel" to "p" in the thumbnail link

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ z" />
                     if (element.media_type == "VIDEO") //Then set source as thumbnail
                         document.getElementById("instagramContainer").innerHTML +=
                         '<a style="margin:0px" target="_blank" href="' + element.permalink +
-                        '"><img class="instagramAsset" src=' + element.permalink + "media/?size=l" + '></a>'
+                        '"><img class="instagramAsset" src=' + element.permalink.replace("reel","p") + "media/?size=l" + '></a>'
                     else
                         document.getElementById("instagramContainer").innerHTML +=
                         '<a style="margin:0px" target="_blank" href="' + element.permalink +
