--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ z" />
             <p>מגיל צעיר עסקנו בתחום כתחביב, שבמהלך השנים רק התפתח ונהיה חלק בלתי נפרד מהחיים שלנו.</p>
             <p>לאחר השחרור מהצבא החלטנו לקחת את התחביב צעד אחד קדימה ולפתוח עסק ביחד.</p>
             <p>אנחנו מאמינים בעבודה משותפת ותקשורת תמידית עם הלקוח לכל אורך הדרך.</p>
-            <p>בתחילת מלחמת ״חרבות ברזל״ הסבנו את העסק לעסק התנדבותי בלבד למען פרוייקטים שקמו לאור המצב;</p>
+            <p>בתחילת מלחמת ״חרבות ברזל״ הסבנו את העסק למשך מספר חודשים לעסק התנדבותי בלבד למען פרוייקטים שקמו לאור המצב;</p>
             <p>להעלאת מודעות, להנצחת חללים, ולעסקים שנפגעו בעקבות המלחמה.</p>
             <p>אנחנו עובדים עם מגוון רחב מאוד של לקוחות:</p>
             <p>זמרים ומוזיקאים, שחקנים, צלמים, עסקים קטנים, בתי ספר, ואפילו עם מספר יחידות בצבא.</p>
@@ -204,7 +204,7 @@ z" />
                 <i class="fa-solid fa-music fa-xl" style="color: #ffffff;"></i>
                 <!-- <img class="productImg" src="Images/branding-logo-design.png" alt=""> -->
                 <h3>עטיפת אלבום</h3>
-                <p>אתם עושים מוזיקה? בדיוק סיימתם את השיר/האלבום שלכם ואתם תקועי בשלב של להתחיל לחשוב על רעיון לעטיפה?
+                <p>אתם עושים מוזיקה? בדיוק סיימתם את השיר/האלבום שלכם ואתם תקועים בשלב של להתחיל לחשוב על רעיון לעטיפה?
                 </p>
                 <p>עטיפת הסינגל או האלבום משחקת תפקיד קריטי ביותר כשמדובר במשיכת הקהל לשמוע את השיר שלכם.</p>
                 <p>אנחנו נעצב לכם את העטיפה המדוייקת ביותר לשיר או לאלבום שלכם, עם אופציה לעטיפה מונפשת לפלטפורמות
@@ -221,10 +221,10 @@ z" />
                 <i class="fa-solid fa-person-walking fa-2xl" style="color: #ffffff;"></i>
                 <!-- <img class="productImg" src="Images/video roll animation.gif" alt=""> -->
                 <h3>אנימציות</h3>
-                <p>קליפ אנימצייה הוא אחת הדרכים המעניינות והכיפיות ביותר לתת ביטוי לסיפור, לשיר, להרצאה, תוך משיכת תשומת
+                <p>קליפ אנימציה הוא אחת הדרכים המעניינות והכיפיות ביותר לתת ביטוי לסיפור, לשיר, להרצאה, תוך משיכת תשומת
                     הלב
                     של קהל היעד שלכם.</p>
-                <p>זו דרך מצויינת להפיח חיים בדמיון ובחלומות שלכם על ידי יצירת אנימציות לא ראליסטיות</p>
+                <p>זו דרך מצויינת להפיח חיים בדמיון ובחלומות שלכם על ידי יצירת אנימציות לא ריאליסטיות,</p>
                 <p>וזו דרך להעביר ולהביא לידי ביטוי את הרעיונות שלכם בצורה יותר יעילה ופשוטה להבנת קהל היעד.</p>
             </div>
         </div>
