Changed body overflow property from 'scroll' to 'visible'
The horizontal scrollbar was shown on Windows browsers when overflow was set to 'scroll'

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ z" />
             element.style.opacity = 0;
             setTimeout(function () {
                 element.parentNode.removeChild(element);
-                document.body.style.overflow = "scroll";
+                document.body.style.overflow = "visible";
             }, speed);
         }
         var myHeaders = new Headers();
