--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
     </script>
 
-    <link rel="icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+	<link rel="icon" type="image/png" sizes="16x16" href="Images/favicon_16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Maven+Pro&display=swap" rel="stylesheet">
