--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ z" />
             },
             {
                 name: "עידו מועלם",
-                text: "תודה לצוות BM Studio על ההירתמות מכל הלב במהלך מלחמת \"חרבות ברזל\" לליווי של עיצוב גרפי עבורנו, קהילת ההסברה IronBridge. תודה מיוחדת לאברי על קרייאטיב לתוך השעות הקטנות של הלילה ועזרה בכל מה שצריך על מנת לבצע הסברה איכותית"
+                text: "תודה לצוות BM Studio על ההירתמות מכל הלב במהלך מלחמת \"חרבות ברזל\" לליווי של עיצוב גרפי עבורנו, קהילת ההסברה IronBridge. תודה מיוחדת על קרייאטיב לתוך השעות הקטנות של הלילה ועזרה בכל מה שצריך על מנת לבצע הסברה איכותית"
             },
             {
                 name: "ערן ניר",
