Updated instagram link to stdio

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ z" />
         <a class="footer-link" href="https://www.facebook.com/profile.php?id=100087661849629" target="_blank">
             <i class="fab fa-square-facebook fa-lg" aria-hidden="true"></i>
         </a>
-        <a class="footer-link" href="https://www.instagram.com/bm.graphica/" target="_blank">
+        <a class="footer-link" href="https://www.instagram.com/bm.stdio/" target="_blank">
             <i class="fab fa-instagram fa-lg" aria-hidden="true"></i>
         </a>
         <p class="copyright">© 2024 BM Studio</p>
